# corki

./: .env.template  .gitignore  DEVELOPMENT_PLAN.md  README.md  pyproject.toml  server.py  server_state.py
api/: image_processor.py  models.py  openai_client.py  recommendation_request.py
backend/: .env.template  pyproject.toml  requirements.txt  server.py
backend/internal/: image_processor.py
backend/prompts/: image_processing_prompt.txt  sommelier_system_prompt.txt  sommelier_user_prompt_template.txt
example_data/: la_compagnie_flatiron_btg.txt
frontend/: .env.template  .firebaserc  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tsconfig.app.json
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: types.ts  wineRecommendation.ts
frontend/src/components/: ChatInput.tsx  ChatInterface.tsx  MessageBubble.tsx
internal/: image_processor.py  openai_client.py
prompts/: sommelier_system_prompt.txt  sommelier_user_prompt_template.txt
